[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Cursor.gd" type="Script" id=2]
[ext_resource path="res://scripts/BirdSpawner.gd" type="Script" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://scripts/BldSet.gd" type="Script" id=5]
[ext_resource path="res://assets/music.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/dyn_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/5x5.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/hit.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/die.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/success.wav" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 48.4267

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;
render_mode unshaded;

void fragment(){
	vec4 oc = texture(TEXTURE, UV);
	if(oc.a > 0.5){
		vec4 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgba;
		c.r = 1.0 - c.r;
		c.g = 1.0 - c.g;
		c.b = 1.0 - c.b;
		COLOR.rgba = c;
	}else{
		COLOR.rgba = texture(TEXTURE, UV);
	}
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 1, 0.701961, 0, 1 )
extra_spacing_bottom = -12
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.0824, 16.5533 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.0824, 16.5533 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22.0824, 16.5533 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Birds" type="Node2D" parent="."]
z_index = 75
script = ExtResource( 3 )

[node name="Cursor" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor"]
z_index = 150
shape = SubResource( 1 )

[node name="CursorBg" type="Sprite" parent="Cursor"]
material = SubResource( 7 )
z_index = 50
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 609, 0, 111, 112 )

[node name="BldSet" type="Node2D" parent="."]
z_index = 25
script = ExtResource( 5 )

[node name="Instructions" type="Node2D" parent="."]
z_index = 200

[node name="Label" type="Label" parent="Instructions"]
margin_left = 87.6327
margin_right = 652.633
margin_bottom = 480.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0705882, 0, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "move the mouse over the birds to keep them from hitting objects

if a bird hits a building (or the moon) you lose

click a bird to remove it if things get stressful (but you will lose points!)

click 3 times to begin"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="Node2D" parent="."]
z_index = 200

[node name="Score" type="Label" parent="ScoreContainer"]
margin_right = 106.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "SCORE
0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishArea"]
position = Vector2( 1016.09, 226.705 )
scale = Vector2( 11.2535, 25.7425 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FinishArea"]
position = Vector2( 320.06, -213.168 )
scale = Vector2( 20.2664, 9.43661 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="FinishArea"]
position = Vector2( 320.268, 692.598 )
scale = Vector2( 20.2664, 9.43661 )
shape = SubResource( 5 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
autoplay = true

[node name="Hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -16.0

[node name="Die" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Success" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
[connection signal="area_entered" from="Cursor" to="Cursor" method="_on_Cursor_area_entered"]
[connection signal="area_exited" from="Cursor" to="Cursor" method="_on_Cursor_area_exited"]
[connection signal="area_entered" from="FinishArea" to="." method="birdFinished"]
